nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: 043751989667.dkr.ecr.us-east-1.amazonaws.com/devtest:nginx-eks
        imagePullPolicy: Always
        ports:
        - containerPort: 80
