ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devtest-ingress-eks
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: "alb-group"

spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
